Fix asset paths and add basic profile page

--- a/blaquacity.html
+++ b/blaquacity.html
@@ -214,7 +214,7 @@
   <div class="section">
     <h2>Maps</h2>
     <div style="text-align:center; margin-bottom:1.5em;">
-      <img src="../assets/images/map.png" alt="Blaqua City Map" style="max-width:100%; border-radius:14px; box-shadow:0 4px 24px #1da98d33; border:3px solid #1da98d; background:#181a25;" />
+      <img src="assets/images/map.png" alt="Blaqua City Map" style="max-width:100%; border-radius:14px; box-shadow:0 4px 24px #1da98d33; border:3px solid #1da98d; background:#181a25;" />
       <div style="color:#73f7d1; font-size:1.1em; margin-top:0.5em;">Blaqua City - Borough Map</div>
     </div>
     <p>
