--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
         <div class="nav-container">
             <div class="nav-left">
                 <div class="logo">
-                    <img src="../assets/images/KarmaGo.png" alt="KarmaGo">
+                    <img src="assets/images/KarmaGo.png" alt="KarmaGo">
                     <span class="logo-text">KarmaGo</span>
                 </div>
             </div>
             <div class="nav-center">
                 <div class="search-container">
                     <input type="text" placeholder="Search KarmaGo..." class="search-input">
-                    <img src="../assets/images/search.png" alt="Search" class="search-icon">
+                    <img src="assets/images/search.png" alt="Search" class="search-icon">
                 </div>
             </div>
             <div class="nav-right">
                 <div class="nav-icons">
                     <div class="nav-icon active" data-page="home">
-                        <img src="../assets/images/home.png" alt="Home">
+                        <img src="assets/images/home.png" alt="Home">
                     </div>
                     <div class="nav-icon" data-page="map">
                         <span class="icon-text">🗺️</span>
@@ -41,18 +41,18 @@
                         <span class="icon-text">🎵</span>
                     </div>
                     <div class="nav-icon" data-page="messages">
-                        <img src="../assets/images/message.png" alt="Messages">
+                        <img src="assets/images/message.png" alt="Messages">
                         <span class="notification-badge">3</span>
                     </div>
                     <div class="nav-icon" data-page="create">
-                        <img src="../assets/images/camera.png" alt="Create">
+                        <img src="assets/images/camera.png" alt="Create">
                     </div>
                     <div class="nav-icon" data-page="notifications">
-                        <img src="../assets/images/notification.png" alt="Activity">
+                        <img src="assets/images/notification.png" alt="Activity">
                         <span class="notification-badge">12</span>
                     </div>
                     <div class="nav-icon profile-menu" data-page="profile">
-                        <img src="../assets/images/profilem.png" alt="Profile" class="profile-pic">
+                        <img src="assets/images/profilem.png" alt="Profile" class="profile-pic">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
         <!-- Left Sidebar -->
         <aside class="left-sidebar">
             <div class="user-profile-card">
-                <img src="../assets/images/profilem.png" alt="Your Profile" class="user-avatar">
+                <img src="assets/images/profilem.png" alt="Your Profile" class="user-avatar">
                 <div class="user-info">
                     <h3>StreetKing_NYC</h3>
                     <p>@streetking_nyc</p>
@@ -71,7 +71,7 @@
             </div>
             <div class="sidebar-menu">
                 <a href="#" class="menu-item active" data-page="home">
-                    <img src="../assets/images/home.png" alt="Home">
+                    <img src="assets/images/home.png" alt="Home">
                     <span>Home</span>
                 </a>
                 <a href="#" class="menu-item" data-page="map">
@@ -83,25 +83,25 @@
                     <span>Music</span>
                 </a>
                 <a href="#" class="menu-item" data-page="explore">
-                    <img src="../assets/images/search.png" alt="Explore">
+                    <img src="assets/images/search.png" alt="Explore">
                     <span>Explore</span>
                 </a>
                 <a href="#" class="menu-item" data-page="notifications">
-                    <img src="../assets/images/notification.png" alt="Notifications">
+                    <img src="assets/images/notification.png" alt="Notifications">
                     <span>Notifications</span>
                     <span class="menu-badge">12</span>
                 </a>
                 <a href="#" class="menu-item" data-page="messages">
-                    <img src="../assets/images/message.png" alt="Messages">
+                    <img src="assets/images/message.png" alt="Messages">
                     <span>Messages</span>
                     <span class="menu-badge">3</span>
                 </a>
                 <a href="#" class="menu-item" data-page="profile">
-                    <img src="../assets/images/profile.png" alt="Profile">
+                    <img src="assets/images/profile.png" alt="Profile">
                     <span>Profile</span>
                 </a>
                 <a href="#" class="menu-item" data-page="settings">
-                    <img src="../assets/images/settings1.png" alt="Settings">
+                    <img src="assets/images/settings1.png" alt="Settings">
                     <span>Settings</span>
                 </a>
             </div>
@@ -133,32 +133,32 @@
                 <div class="stories-container">
                     <div class="story-item your-story">
                         <div class="story-avatar">
-                            <img src="../assets/images/profilem.png" alt="Your Story">
+                            <img src="assets/images/profilem.png" alt="Your Story">
                             <div class="add-story-btn">+</div>
                         </div>
                         <span class="story-username">Your Story</span>
                     </div>
                     <div class="story-item">
                         <div class="story-avatar has-story">
-                            <img src="../assets/images/profilew.png" alt="DJ_Kool">
+                            <img src="assets/images/profilew.png" alt="DJ_Kool">
                         </div>
                         <span class="story-username">DJ_Kool</span>
                     </div>
                     <div class="story-item">
                         <div class="story-avatar has-story">
-                            <img src="../assets/images/profile.png" alt="FashionKilla">
+                            <img src="assets/images/profile.png" alt="FashionKilla">
                         </div>
                         <span class="story-username">FashionKilla</span>
                     </div>
                     <div class="story-item">
                         <div class="story-avatar has-story">
-                            <img src="../assets/images/profilem.png" alt="StreetChef">
+                            <img src="assets/images/profilem.png" alt="StreetChef">
                         </div>
                         <span class="story-username">StreetChef</span>
                     </div>
                     <div class="story-item">
                         <div class="story-avatar">
-                            <img src="../assets/images/profilew.png" alt="MC_Brooklyn">
+                            <img src="assets/images/profilew.png" alt="MC_Brooklyn">
                         </div>
                         <span class="story-username">MC_Brooklyn</span>
                     </div>
@@ -166,16 +166,16 @@
                 <!-- Create Post -->
                 <div class="create-post-card">
                     <div class="create-post-header">
-                        <img src="../assets/images/profilem.png" alt="Your Avatar" class="create-avatar">
+                        <img src="assets/images/profilem.png" alt="Your Avatar" class="create-avatar">
                         <input type="text" placeholder="What's happening in the streets?" class="create-input">
                     </div>
                     <div class="create-post-actions">
                         <button class="action-button">
-                            <img src="../assets/images/image.png" alt="Photo">
+                            <img src="assets/images/image.png" alt="Photo">
                             Photo
                         </button>
                         <button class="action-button">
-                            <img src="../assets/images/camera.png" alt="Video">
+                            <img src="assets/images/camera.png" alt="Video">
                             Video
                         </button>
                         <button class="action-button">
@@ -183,7 +183,7 @@
                             Music
                         </button>
                         <button class="action-button">
-                            <img src="../assets/images/emoji.png" alt="Feeling">
+                            <img src="assets/images/emoji.png" alt="Feeling">
                             Feeling
                         </button>
                     </div>
@@ -237,7 +237,7 @@
                 <!-- Music Player -->
                 <div class="music-player" id="musicPlayer">
                     <div class="player-track-info">
-                        <img src="../assets/images/BlaquaCrown.png" alt="Track Cover" class="track-cover">
+                        <img src="assets/images/BlaquaCrown.png" alt="Track Cover" class="track-cover">
                         <div class="track-details">
                             <h4 id="currentTrackTitle">No track playing</h4>
                             <p id="currentTrackArtist">Select a track to start</p>
@@ -277,18 +277,33 @@
                             <!-- Playlists will be loaded here -->
                         </div>
                     </div>
-                    <div id="uploadTab" class="music-tab-content">
-                        <div class="upload-section">
-                            <h3>Upload Your Track</h3>
-                            <div class="upload-form">
-                                <input type="file" id="trackFile" accept="audio/*" class="file-input">
-                                <input type="text" id="trackTitle" placeholder="Track Title" class="form-input">
-                                <input type="text" id="trackArtist" placeholder="Artist Name" class="form-input">
-                                <textarea id="trackDescription" placeholder="Description..." class="form-textarea"></textarea>
-                                <button class="upload-btn" id="uploadTrackBtn">🎵 Upload Track</button>
-                            </div>
+                <div id="uploadTab" class="music-tab-content">
+                    <div class="upload-section">
+                        <h3>Upload Your Track</h3>
+                        <div class="upload-form">
+                            <input type="file" id="trackFile" accept="audio/*" class="file-input">
+                            <input type="text" id="trackTitle" placeholder="Track Title" class="form-input">
+                            <input type="text" id="trackArtist" placeholder="Artist Name" class="form-input">
+                            <textarea id="trackDescription" placeholder="Description..." class="form-textarea"></textarea>
+                            <button class="upload-btn" id="uploadTrackBtn">🎵 Upload Track</button>
                         </div>
                     </div>
+                </div>
+            </div>
+            </div>
+            <!-- Profile Page Content -->
+            <div id="profilePage" class="page-content">
+                <div class="profile-header">
+                    <img src="assets/images/profilem.png" alt="Profile" class="profile-avatar">
+                    <h2>StreetKing_NYC</h2>
+                </div>
+                <div class="profile-stats">
+                    <span id="profilePostsCount">342 Posts</span>
+                    <span>12.5K Followers</span>
+                    <span>850 Following</span>
+                </div>
+                <div class="profile-posts" id="profilePosts">
+                    <!-- Profile posts will be loaded here -->
                 </div>
             </div>
         </section>
@@ -301,7 +316,7 @@
                     <a href="#" class="see-all">See All</a>
                 </div>
                 <div class="suggestion-item">
-                    <img src="../assets/images/profilew.png" alt="MC_Brooklyn" class="suggestion-avatar">
+                    <img src="assets/images/profilew.png" alt="MC_Brooklyn" class="suggestion-avatar">
                     <div class="suggestion-info">
                         <h5>MC_Brooklyn</h5>
                         <p>Hip-Hop Artist • Followed by DJ_Kool</p>
@@ -309,7 +324,7 @@
                     <button class="follow-btn">Follow</button>
                 </div>
                 <div class="suggestion-item">
-                    <img src="../assets/images/profile.png" alt="StreetChef_NYC" class="suggestion-avatar">
+                    <img src="assets/images/profile.png" alt="StreetChef_NYC" class="suggestion-avatar">
                     <div class="suggestion-info">
                         <h5>StreetChef_NYC</h5>
                         <p>Food Blogger • Followed by 5 friends</p>
@@ -317,7 +332,7 @@
                     <button class="follow-btn">Follow</button>
                 </div>
                 <div class="suggestion-item">
-                    <img src="../assets/images/profilem.png" alt="FashionKilla_BK" class="suggestion-avatar">
+                    <img src="assets/images/profilem.png" alt="FashionKilla_BK" class="suggestion-avatar">
                     <div class="suggestion-info">
                         <h5>FashionKilla_BK</h5>
                         <p>Style Influencer • Popular in Brooklyn</p>
@@ -362,7 +377,7 @@
     <!-- Mobile Bottom Navigation -->
     <nav class="bottom-nav">
         <div class="bottom-nav-item active" data-page="home">
-            <img src="../assets/images/home.png" alt="Home">
+            <img src="assets/images/home.png" alt="Home">
         </div>
         <div class="bottom-nav-item" data-page="map">
             <span class="mobile-icon">🗺️</span>
@@ -371,11 +386,11 @@
             <span class="mobile-icon">🎵</span>
         </div>
         <div class="bottom-nav-item" data-page="notifications">
-            <img src="../assets/images/notification.png" alt="Activity">
+            <img src="assets/images/notification.png" alt="Activity">
             <span class="mobile-badge">12</span>
         </div>
         <div class="bottom-nav-item" data-page="profile">
-            <img src="../assets/images/profilem.png" alt="Profile" class="mobile-profile-pic">
+            <img src="assets/images/profilem.png" alt="Profile" class="mobile-profile-pic">
         </div>
     </nav>
     <!-- Firebase Configuration -->
@@ -397,8 +412,20 @@
         window.storage = firebase.storage();
         console.log("🔥 Firebase initialized successfully!");
     </script>
-    <script src="../javascript/firebase-init.js"></script>
-    <script src="../javascript/karmago-firebase.js"></script>
-    <script src="../javascript/karmago-social.js"></script>
+    <script src="./firebase-init.js"></script>
+    <script src="./karmago-firebase.js"></script>
+    <script src="./karmago-social.js"></script>
+    <script>
+        // Simple page navigation
+        document.querySelectorAll('.nav-icon, .bottom-nav-item, .menu-item').forEach(item => {
+            item.addEventListener('click', () => {
+                const target = item.dataset.page;
+                if (!target) return;
+                document.querySelectorAll('.page-content').forEach(p => p.classList.remove('active'));
+                const page = document.getElementById(`${target}Page`);
+                if (page) page.classList.add('active');
+            });
+        });
+    </script>
 </body>
 </html>
