--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>KarmaGo - Login</title>
     <link rel="stylesheet" href="login-style.css">
     
-    <!-- Firebase SDKs -->
+    <!-- Firebase SDKs - Make sure these load BEFORE your script -->
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -25,8 +25,8 @@
             <div class="login-content">
                 <h1>Login to Your Account</h1>
                 
-                <!-- Email/Password Form -->
-                <form id="loginForm" class="login-form">
+                <!-- Email/Password Form - IMPORTANT: onsubmit="return false" prevents default submission -->
+                <form id="loginForm" class="login-form" onsubmit="return false;">
                     <div class="form-group">
                         <label for="email">EMAIL</label>
                         <input type="email" id="email" placeholder="Enter email address" required>
@@ -48,7 +48,7 @@
                 </div>
 
                 <!-- Google Login -->
-                <button id="googleLoginBtn" class="google-login-btn">
+                <button type="button" id="googleLoginBtn" class="google-login-btn">
                     <img src="https://developers.google.com/identity/images/g-logo.png" alt="Google" class="google-icon">
                     Sign in with Google
                 </button>
@@ -59,7 +59,7 @@
                 </div>
 
                 <!-- Create Account -->
-                <button id="createAccountBtn" class="create-account-btn">Create New Account</button>
+                <button type="button" id="createAccountBtn" class="create-account-btn">Create New Account</button>
             </div>
         </div>
     </div>
@@ -73,6 +73,7 @@
     <!-- Error Message -->
     <div id="errorMessage" class="error-message hidden"></div>
 
+    <!-- Your script MUST come after Firebase scripts -->
     <script src="login-script.js"></script>
 </body>
 </html>
